--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "handlebars": "^4.7.8",
-    "marked": "^12.0.0"
+    "highlight.js": "^11.9.0",
+    "js-beautify": "^1.15.1",
+    "marked": "^12.0.0",
+    "marked-highlight": "^2.1.1"
   }
 }
