--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md-ssg",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "description": "A simple markdown static site generator.",
   "author": "deyixtan",
   "license": "ISC",
@@ -15,7 +15,9 @@
     "highlight.js": "^11.9.0",
     "isomorphic-dompurify": "^2.4.0",
     "js-beautify": "^1.15.1",
+    "markdown-toc": "^1.2.0",
     "marked": "^12.0.0",
+    "marked-gfm-heading-id": "^3.1.3",
     "marked-highlight": "^2.1.1"
   }
 }
