--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "tsx index.ts"
   },
   "dependencies": {
     "handlebars": "^4.7.8",
@@ -19,5 +19,10 @@
     "marked": "^12.0.0",
     "marked-gfm-heading-id": "^3.1.3",
     "marked-highlight": "^2.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.24",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   }
 }
