--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsx index.ts"
+    "start": "tsx src/main.ts",
+    "lint": "eslint .",
+    "format": "prettier . --write"
   },
   "dependencies": {
+    "commander": "^12.0.0",
+    "glob": "^10.3.10",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.9.0",
     "isomorphic-dompurify": "^2.4.0",
@@ -21,7 +25,13 @@
     "marked-highlight": "^2.1.1"
   },
   "devDependencies": {
+    "@types/js-beautify": "1.14.3",
     "@types/node": "^20.11.24",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "prettier": "3.2.5",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
